refactor with traefik

--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
 # Images versions
 MARIADB_VERSION=latest
 WORDPRESS_VERSION=latest
-PHPMYADMIN_VERSION=latest
 
 # Website
 WEBSITE_ID=arkod-wp-website
@@ -12,13 +11,9 @@ PLUGINS_DIR=plugins
 
 # Database
 DB_ROOT_PASSWORD=password
-DB_USER=arkod-wp
+DB_USER=arkod
 DB_PASSWORD=password
 DB_TABLES_PREFIX=wp_
-
-# Ports
-WORDPRESS_PORT=80
-PHPMYADMIN_PORT=8080
 
 # Docker Compose
 COMPOSE_PROJECT_NAME=$WEBSITE_ID
